--- a/projects/00-hola-mundo/src/app.css
+++ b/projects/00-hola-mundo/src/app.css
@@ -1,29 +1,18 @@
-body{
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: grid;
     place-content: center;
     min-height: 100vh;
     background: #222;
 }
-
-.tw-followCard{
+section{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #fff;
-    font-size: .8rem;
-}
-.tw-followCard-header{
-  display: flex;
-  align-items: center;
-  gap: 4px
-}
-.tw-followCard-img{
-
-}
-.tw-followCard-info{
-  display: flex;
-  flex-direction: column;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
 }
